Ubuntu no iconify

--- a/Settings.properties
+++ b/Settings.properties
@@ -1,5 +1,5 @@
-#Tue Apr 12 23:14:36 EDT 2016
-GameToday=4-12
+#Mon Jun 27 15:22:20 PDT 2016
+GameToday=6-14
 closeMonitor=false
 interval=1
 fullScreen=true
