--- a/Settings.properties
+++ b/Settings.properties
@@ -1,7 +1,7 @@
-#Fri Jul 08 17:04:13 PDT 2016
+#Thu Jul 14 14:26:16 PDT 2016
 GameToday=6-14
 closeMonitor=false
-interval=1
-fullScreen=true
+interval=5
+fullScreen=false
 Games=Dota 2\:dota2.exe
-period=10
+period=1
