--- a/Settings.properties
+++ b/Settings.properties
@@ -1,6 +1,6 @@
-#Thu Jul 14 14:26:16 PDT 2016
-GameToday=6-14
-closeMonitor=false
+#Fri Jul 22 16:50:47 PDT 2016
+GameToday=7-22
+closeMonitor=true
 interval=5
 fullScreen=false
 Games=Dota 2\:dota2.exe
